<resources>
    <string name="app_name">NewsApp</string>
    <string name="sample_title">Police to issue England fans with guide to ‘sensitive sites’ at World Cup</string>
    <string name="sample_date">2018-05-15</string>
    <string name="sample_time">19:25:02</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="empty_news_list">There are no News. No News is good news!</string>
    <string name="sample_section_name">Technology</string>
    <string name="sample_author_name">Belousov Igor</string>

    <!--Settings: activity and menu-->
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">NewsApp Settings</string>

    <!--Settings: number of displaying items-->
    <string name="settings_items_label">Number of Items</string>
    <string name="settings_items_key" translatable="false">page_size</string>
    <string name="settings_items_default" translatable="false">10</string>

    <!--Settings: Ordery By-->
    <string name="settings_orderby_label">Order By</string>
    <string name="settings_orderby_key" translatable="false">order_by</string>
    <string name="settings_orderby_default" translatable="false">newest</string>
    
    <string name="settings_orderby_newest_label">Newest</string>
    <string name="settings_orderby_newest_value" translatable="false">newest</string>

    <string name="settings_orderby_oldest_label">Oldest</string>
    <string name="settings_orderby_oldest_value" translatable="false">oldest</string>

    <string name="settings_orderby_relevance_label">Relevance</string>
    <string name="settings_orderby_relevance_value" translatable="false">relevance</string>


</resources>
