<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="94dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/section_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/section_rectangle"
            android:paddingLeft="@dimen/section_padding"
            android:paddingRight="@dimen/section_padding"
            android:textAppearance="?android:attr/textAppearanceSmall"
            tools:text="@string/sample_section_name" />

        <TextView
            android:id="@+id/author_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/author_padding_left"
            android:textColor="@color/author_name"
            tools:text="@string/sample_author_name" />

        <TextView
            android:id="@+id/news_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/section_name"
            android:maxLines="3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/title_color"
            tools:text="@string/sample_title" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end|bottom">

            <TextView
                android:id="@+id/news_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/date_time_color"
                tools:text="@string/sample_date" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="end|top">

            <TextView
                android:id="@+id/news_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/date_time_color"
                tools:text="@string/sample_time" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>